--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^0.0.0-dev-v2-20230601153241",
+    "framer-motion": "^10.12.16",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-variants": "^0.1.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.0.4"
   }
 }
