--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "next-pages-template",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@nextui-org/react": "^2.2.6",
-    "framer-motion": "^10.16.4",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "clsx": "^2.0.0",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "intl-messageformat": "^10.5.0",
-    "next": "13.4.19",
-    "next-themes": "^0.2.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
-  }
+	"name": "next-pages-template",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@nextui-org/react": "^2.2.10",
+		"framer-motion": "^11.0.18",
+		"next": "14.1.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"clsx": "^2.0.0",
+		"intl-messageformat": "^10.5.0",
+		"next-themes": "^0.2.1"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.4",
+		"postcss": "^8",
+		"tailwindcss": "^3.3.0",
+		"tailwind-variants": "^0.1.18",
+		"typescript": "^5"
+	}
 }
