--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "eslint -c .eslintrc.json **/*.{ts,tsx} --fix"
 	},
 	"dependencies": {
 		"@nextui-org/react": "^2.3.6",
@@ -14,10 +14,19 @@
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
 		"autoprefixer": "10.4.19",
 		"clsx": "^2.0.0",
-		"eslint": "8.48.0",
-		"eslint-config-next": "14.2.1",
+		"eslint": "^8.26.0",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-unused-imports": "^3.2.0",
 		"intl-messageformat": "^10.5.0",
 		"next": "14.2.1",
 		"next-themes": "^0.2.1",
