--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"intl-messageformat": "^10.5.0",
+		"@react-aria/visually-hidden": "^3.8.10",
 		"next": "14.2.1",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
