--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
-		"@nextui-org/react": "^2.4.0",
-		"framer-motion": "^11.1.1",
+		"@nextui-org/react": "2.4.1",
+		"framer-motion": "~11.1.1",
 		"@types/node": "20.5.7",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
+		"@typescript-eslint/eslint-plugin": "7.2.0",
+		"@typescript-eslint/parser": "7.2.0",
 		"autoprefixer": "10.4.19",
-		"clsx": "^2.0.0",
+		"clsx": "2.0.0",
 		"eslint": "^8.26.0",
 		"eslint-config-prettier": "^8.2.0",
 		"eslint-plugin-import": "^2.26.0",
@@ -28,13 +28,13 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "^3.2.0",
 		"intl-messageformat": "^10.5.0",
-		"@react-aria/visually-hidden": "^3.8.10",
+		"@react-aria/visually-hidden": "3.8.12",
 		"next": "14.2.1",
 		"next-themes": "^0.2.1",
 		"postcss": "8.4.38",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"tailwind-variants": "^0.1.20",
+		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.0.4"
 	}
