--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"postcss": "8.4.38",
 		"tailwind-variants": "0.1.20",
 		"tailwindcss": "3.4.3",
-		"typescript": "5.6.3"
+		"typescript": "5.6.3",
+		"prettier": "3.3.3"
 	}
 }
