--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
 		"@typescript-eslint/parser": "8.11.0",
 		"autoprefixer": "10.4.19",
 		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^8.2.0",
+		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsx-a11y": "^6.4.1",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-prettier": "5.2.1",
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
