chore(deps): bump dependencies

--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
 		"lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
 	},
 	"dependencies": {
-		"@nextui-org/button": "2.0.38",
-		"@nextui-org/code": "2.0.33",
-		"@nextui-org/input": "2.2.5",
-		"@nextui-org/kbd": "2.0.34",
-		"@nextui-org/link": "2.0.35",
-		"@nextui-org/listbox": "2.1.27",
-		"@nextui-org/navbar": "2.0.37",
-		"@nextui-org/snippet": "2.0.43",
-		"@nextui-org/switch": "2.0.34",
-		"@nextui-org/system": "2.2.6",
-		"@nextui-org/theme": "2.2.11",
-		"@react-aria/visually-hidden": "3.8.12",
+		"@nextui-org/button": "2.2.8",
+		"@nextui-org/code": "2.2.5",
+		"@nextui-org/input": "2.4.7",
+		"@nextui-org/kbd": "2.2.5",
+		"@nextui-org/link": "2.2.6",
+		"@nextui-org/listbox": "2.3.8",
+		"@nextui-org/navbar": "2.2.7",
+		"@nextui-org/snippet": "2.2.9",
+		"@nextui-org/switch": "2.2.7",
+		"@nextui-org/system": "2.4.5",
+		"@nextui-org/theme": "2.4.4",
+		"@react-aria/visually-hidden": "3.8.18",
 		"clsx": "2.1.1",
-		"framer-motion": "~11.1.1",
+		"framer-motion": "11.13.1",
 		"intl-messageformat": "^10.5.0",
-		"next": "14.2.4",
-		"next-themes": "^0.2.1",
+		"next": "15.0.4",
+		"next-themes": "^0.4.4",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
 	},
@@ -45,9 +45,9 @@
 		"eslint-plugin-react": "^7.23.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-unused-imports": "4.1.4",
-		"postcss": "8.4.38",
+		"postcss": "8.4.49",
 		"tailwind-variants": "0.1.20",
-		"tailwindcss": "3.4.3",
+		"tailwindcss": "3.4.16",
 		"typescript": "5.6.3",
 		"prettier": "3.3.3"
 	}
